<resources>
    <string name="app_name">RxJavaPlayground</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_basic">Basic</string>
    <string name="button_retrofit">Retrofit</string>
    <string name="button_zip">Zip</string>
    <string name="button_basic_operator">Basic Operators</string>
    <string name="button_map">map</string>
    <string name="button_filter">filter</string>
    <string name="button_flat_map">flat map</string>
    <string name="button_delay">delay</string>
    <string name="button_combine_operator">Combine Operator</string>
    <string name="merge">merge</string>
    <string name="zip">zip</string>
    <string name="combineLast">combine last</string>
    <string name="button_condition">Condition</string>
    <string name="amb">amb</string>
    <string name="takeUtil">takeUtil</string>
    <string name="takeWhile">takeWhile</string>
    <string name="button_distinct">distinct</string>
    <string name="button_take">take</string>
    <string name="button_skip">skip</string>
    <string name="button_take_last">takeLast</string>
    <string name="button_skip_last">skipLast</string>
    <string name="button_last">Last</string>
    <string name="button_first">First</string>
    <string name="concurrency">Concurrency</string>
    <string name="firstOrDefault">firstOrDefault</string>
    <string name="element">element</string>
</resources>
