<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.MainFragment">

    <Button
        android:id="@+id/btnBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_basic" />

    <Button
        android:id="@+id/btnBasicOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_basic_operator" />

    <Button
        android:id="@+id/btnCombineOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_combine_operator" />

    <Button
        android:id="@+id/btnCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_condition" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_filter" />

    <Button
        android:id="@+id/btnConcurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/concurrency" />

    <Button
        android:id="@+id/btnRetrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_retrofit" />

</LinearLayout>
