<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.werocksta.rxjavaplayground.view.fragment.FilterFragment">

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_filter" />

    <Button
        android:id="@+id/btnDistinct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnFilter"
        android:layout_toRightOf="@id/btnFilter"
        android:text="@string/button_distinct" />

    <Button
        android:id="@+id/btnTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnDistinct"
        android:layout_toRightOf="@id/btnDistinct"
        android:text="@string/button_take" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnTake"
        android:layout_toRightOf="@id/btnTake"
        android:text="@string/button_skip" />

</RelativeLayout>
