<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.werocksta.rxjavaplayground.view.fragment.OperatorFragment">

    <EditText
        android:id="@+id/edtText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_map" />

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_filter" />

        <Button
            android:id="@+id/btnFlatMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_flat_map" />

    </LinearLayout>

</LinearLayout>
